# ais

./: .dockerignore  .dockerignore.docs  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCS_DOCKER.md  Dockerfile  README-zh.md  README.en.md  README.md  ais.rb  ais_report.html  demo_panel_improvement.py  docs.Dockerfile  fix_shell_integration.sh  global_install.sh  implementation_plan.md  install.sh  netlify.toml  package-lock.json  package.json  pyproject.toml  start_interactive_shell.sh  test_integration.sh  test_new_shell.sh  test_panel_integration.py  thinking.md  uninstall.sh  vercel.json  verify_integration.sh  wrangler.toml
.claude/: settings.local.json
.cursor/rules/: err.md  note.md  test.md  todolist.mdc
.github/workflows/: ci.yml  container-build-deploy.yml  continuous-integration.yml  deploy-docs-manual.yml  deploy-docs-simple.yml  deploy-docs.yml  docker.yml  docs-container-deploy.yml  release.yml  (+2 more)
ais/: __init__.py  ai.py  cli.py  config.py  context.py  database.py  interactive.py
docs/: CHANGELOG.md  DEPLOYMENT_GUIDE.md  INSTALLATION.md  INSTALLATION_OLD.md  INSTALLATION_STRATEGY.md  PIPX_INSTALLATION_GUIDE.md  README.md  changelog.md  index.md  showcase.md  team.md
scripts/: check-vercel-config.js  install.ps1  install.sh  install_global.sh  install_optimized.sh  release.sh  test_installation.sh  uninstall.sh
shell/: integration.sh
test_ais_terminal/: pyvenv.cfg
tests/: test_ai.py  test_basic.py  test_cli_main.py  test_config.py  test_context.py  test_database.py  test_interactive.py  test_report.py
verify_env/: pyvenv.cfg
(+40 files in other folders)
