[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ais-cli"
version = "0.1.0"
description = "智能终端助手 - AI-powered terminal assistant"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AIS Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "httpx>=0.24.0",
    "toml>=0.10.2",
    "sqlmodel>=0.0.14",
]

[project.scripts]
ais = "ais.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ais"]

[project.urls]
Homepage = "https://github.com/ais-cli/ais"
Issues = "https://github.com/ais-cli/ais/issues"